# template-heaven

./: .dockerignore  .gitignore  AI_ML_WORKFLOW_COVERAGE_ANALYSIS.md  API_DOCUMENTATION.md  APP_STATUS.md  CLI_USAGE_GUIDE.md  COMPREHENSIVE_ANSWER.md  CONTRIBUTING.md  Dockerfile  FINAL_PROJECT_COMPLETION.md  FINAL_STATUS.md  HOW_IT_WORKS.md  HOW_TEMPLATE_HEAVEN_WORKS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MICROSERVICES_README.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  STACK_CATALOG.md  SYSTEM_EXPLANATION.md  USAGE_GUIDE.md  WIZARD_DEMONSTRATION.md  WIZARD_EXPLANATION.md  WIZARD_HOW_IT_WORKS.md  demo.py  docker-compose.microservices.yml  docker-compose.yml  env.example  pyproject.toml  quick_demo.py  requirements-dev.txt  requirements.txt  security.md  setup.py  simple_demo.py  test_auth.py  test_docs.py  (+4 more)
docs/: BRANCH_STRATEGY.md  (+5 more)
stacks/ai-ml/ai-benchmarks-suite/: README.md  UPSTREAM.md  pyproject.toml  requirements.txt  run_benchmarks.py  setup.py
stacks/ai-ml/ai-benchmarks-suite/ai_benchmarks/: __init__.py  __main__.py
stacks/ai-ml/ai-benchmarks-suite/examples/: basic_usage.py
stacks/ai-ml/ai-benchmarks-suite/template/: __init__.py
stacks/ai-ml/ai-benchmarks-suite/template/config/: benchmark_config.yaml
stacks/ai-ml/ai-benchmarks-suite/template/src/: cli.py
stacks/ai-ml/ai-benchmarks-suite/template/src/core/: base_benchmark.py  benchmark_runner.py
stacks/ai-ml/ai-benchmarks-suite/tests/: README.md  __init__.py
stacks/ai-ml/ai-benchmarks-suite/tests/integration/: test_benchmark_runner.py  test_cli_integration.py
stacks/ai-ml/ai-benchmarks-suite/tests/unit/: test_agi_benchmarks.py  test_asi_benchmarks.py  test_base_benchmark.py  test_hybrid_llm_benchmarks.py  test_neuromorphic_benchmarks.py
stacks/ai-ml/mcp-middleware/: Makefile  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
stacks/ai-ml/mcp-middleware/.cursor/rules/: mcp-development.mdc
stacks/ai-ml/mcp-middleware/.github/workflows/: mcp-validation.yml
stacks/ai-ml/mcp-middleware/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
stacks/ai-ml/mcp-middleware/docker/monitoring/: prometheus.yml
stacks/ai-ml/mcp-middleware/docker/nginx/: nginx.conf
stacks/ai-ml/mcp-middleware/python-mcp-sdk/: Dockerfile  Dockerfile.client  Dockerfile.jupyter  Makefile  README.md  UPSTREAM.md  docker-compose.yml  env.example  pyproject.toml  requirements-client.txt  requirements-dev.txt  requirements.txt
stacks/ai-ml/mcp-middleware/python-mcp-sdk/examples/clients/: simple_client.py
stacks/ai-ml/mcp-middleware/python-mcp-sdk/scripts/: init-db.sql
stacks/ai-ml/mcp-middleware/python-mcp-sdk/src/mcp_sdk/: __init__.py  main.py
stacks/ai-ml/mcp-middleware/src/mcp_middleware/: __init__.py  main.py
stacks/ai-ml/mcp-middleware/src/mcp_middleware/core/: protocol_handler.py  server_manager.py
stacks/ai-ml/mcp-middleware/src/mcp_middleware/servers/: api.py  base.py  clickup.py  database.py  execution.py  filesystem.py  git.py  search.py  vector.py  web.py
stacks/ai-ml/mcp-middleware/src/mcp_middleware/utils/: config.py
stacks/ai-ml/quantum-computing-starter/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_quantum_app.py  setup.py
stacks/ai-ml/quantum-computing-starter/.cursor/rules/: quantum-development.mdc
stacks/ai-ml/quantum-computing-starter/.github/workflows/: quantum-validation.yml
stacks/ai-ml/quantum-computing-starter/scripts/: benchmark_quantum.py  setup_quantum_env.py
stacks/ai-ml/quantum-computing-starter/src/: __init__.py
stacks/ai-ml/quantum-computing-starter/src/backends/: __init__.py  local_simulator.py
stacks/ai-ml/quantum-computing-starter/src/quantum_circuits/: __init__.py  basic_gates.py
stacks/ai-ml/quantum-computing-starter/src/quantum_circuits/algorithms/: __init__.py  shor.py
stacks/ai-ml/quantum-computing-starter/src/quantum_ml/: __init__.py  qnn.py
stacks/ai-ml/quantum-computing-starter/tests/: test_basic.py
stacks/backend/fastapi-postgresql/: Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
stacks/backend/fastapi-postgresql/.github/workflows/: backend-validation.yml
stacks/backend/fastapi-postgresql/docker/: docker-compose.dev.yml  docker-compose.yml
stacks/backend/fastapi-postgresql/src/app/: __init__.py  main.py
stacks/backend/fastapi-postgresql/src/app/core/: config.py  database.py  security.py
stacks/backend/fastapi-postgresql/src/app/models/: user.py
templates/gold-standard-python-service/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
templates/gold-standard-python-service/.cursor/rules/: comprehensive-standards.mdc
templates/gold-standard-python-service/.github/workflows/: comprehensive-ci.yml
templates/gold-standard-python-service/app/: __init__.py  main.py
templates/gold-standard-python-service/app/core/: __init__.py  config.py
templates/gold-standard-python-service/docs/: README.md
templates/gold-standard-python-service/scripts/: setup_ai_context.py
templates/pytest-comprehensive/: README.md  TEMPLATE_SUMMARY.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
templates/pytest-comprehensive/tests/helpers/: test_helpers.py
templates/pytest-comprehensive/tests/performance/: test_performance.py
templates/pytest-comprehensive/tests/test_e2e/: test_user_journeys.py
templates/pytest-comprehensive/tests/test_integration/: test_system_integration.py
templates/pytest-comprehensive/tests/test_unit/: test_core_logic.py
test-yaml-fix/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
test-yaml-fix/.cursor/rules/: comprehensive-standards.mdc
test-yaml-fix/.github/workflows/: comprehensive-ci.yml
test-yaml-fix/app/: __init__.py  main.py
test-yaml-fix/app/api/: dependencies.py
test-yaml-fix/app/core/: __init__.py  config.py
test-yaml-fix/docs/: README.md
(+406 files in other folders)
