[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-yaml-fix"
version = "0.1.0"
description = "A gold-standard project"
authors = [
    {name = "Test User", email = "user@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi^0.104.0",
    "uvicorn^0.24.0",
    "sqlalchemy^2.0.0",
    "alembic^1.12.0",
    "pytest^7.4.0",
    "mypy^1.7.0",
    "black^23.11.0",
    "sphinx^7.1.0",
    "bandit^1.7.5",
    "prometheus-client^0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "flake8>=6.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
disallow_untyped_defs = true
