[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-benchmarks-suite"
version = "1.0.0"
description = "Comprehensive AI Benchmarks Suite for evaluating AI systems across all intelligence paradigms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Template Heaven Team", email = "team@templateheaven.org"},
]
maintainers = [
    {name = "Template Heaven Team", email = "team@templateheaven.org"},
]
keywords = [
    "ai", "benchmarking", "machine-learning", "artificial-intelligence",
    "neuromorphic", "quantum-computing", "agi", "asi", "evaluation",
    "performance-testing", "ai-safety", "interpretability"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "torch>=1.9.0",
    "tensorflow>=2.6.0",
    "transformers>=4.10.0",
    "datasets>=1.12.0",
    "ray>=1.9.0",
    "pytest>=6.2.0",
    "pytest-asyncio>=0.15.0",
    "pytest-cov>=2.12.0",
    "tqdm>=4.62.0",
    "PyYAML>=5.4.0",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
neuromorphic = [
    "norse>=0.0.7",
    "snnTorch>=0.4.0",
]
quantum = [
    "qiskit>=0.30.0",
    "pennylane>=0.15.0",
]
gpu = [
    "cupy>=9.0.0",
    "jax>=0.2.0",
    "jaxlib>=0.1.0",
]
multimodal = [
    "Pillow>=8.0.0",
    "opencv-python>=4.5.0",
    "librosa>=0.8.0",
    "nltk>=3.6.0",
    "spacy>=3.2.0",
]
tracking = [
    "mlflow>=1.20.0",
    "wandb>=0.12.0",
]
docs = [
    "sphinx>=4.2.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.15.0",
]
dev = [
    "black>=21.0.0",
    "isort>=5.9.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]
all = [
    "ai-benchmarks-suite[neuromorphic,quantum,gpu,multimodal,tracking,docs,dev]",
]

[project.scripts]
ai-benchmarks = "ai_benchmarks.cli:main"

[project.urls]
Homepage = "https://github.com/template-heaven/ai-benchmarks-suite"
Documentation = "https://ai-benchmarks-suite.readthedocs.io/"
Repository = "https://github.com/template-heaven/ai-benchmarks-suite"
Issues = "https://github.com/template-heaven/ai-benchmarks-suite/issues"
Changelog = "https://github.com/template-heaven/ai-benchmarks-suite/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["ai_benchmarks"]
package-dir = {"" = "template"}

[tool.setuptools.package-data]
ai_benchmarks = ["config/*.yaml", "config/*.yml"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ai_benchmarks"]
known_third_party = [
    "numpy",
    "pandas",
    "scipy",
    "sklearn",
    "torch",
    "tensorflow",
    "transformers",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "norse.*",
    "snnTorch.*",
    "qiskit.*",
    "pennylane.*",
    "cupy.*",
    "jax.*",
    "jaxlib.*",
    "librosa.*",
    "nltk.*",
    "spacy.*",
    "wandb.*",
    "mlflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=ai_benchmarks --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmark tests",
    "neuromorphic: marks tests related to neuromorphic computing",
    "quantum: marks tests related to quantum computing",
]

[tool.coverage.run]
source = ["ai_benchmarks"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
]
