[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-computing-starter"
version = "1.0.0"
description = "Quantum computing development environment with Qiskit, Cirq, and PennyLane"
authors = [
    {name = "Template Heaven Team", email = "team@templateheaven.dev"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["quantum", "qiskit", "cirq", "pennylane", "machine-learning", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core Quantum Frameworks
    "qiskit>=0.44.0",
    "qiskit-aer>=0.12.0",
    "qiskit-ibmq-provider>=0.20.0",
    "qiskit-machine-learning>=0.7.0",
    "cirq>=1.0.0",
    "cirq-google>=1.0.0",
    "pennylane>=0.30.0",
    "pennylane-qiskit>=0.30.0",

    # Classical Computing Dependencies
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.6.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",

    # Web Framework (for demos and visualization)
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",

    # Development Tools
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "plotly>=5.0.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",

    # Code Quality
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",

    # Security
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "pip-audit>=2.6.0",

    # Documentation
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",

    # Development Tools
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=6.5.0",
    "jupyterlab>=3.6.0",

    # Performance Monitoring
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",

    # Additional Testing
    "hypothesis>=6.75.0",
    "coverage>=7.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
    "sphinxcontrib-mermaid>=0.9.0",
]
cloud = [
    # AWS Braket (uncomment if needed)
    # "amazon-braket-sdk>=1.0.0",
    # "boto3>=1.28.0",
]
research = [
    # Advanced quantum research tools
    "qutip>=4.7.0",  # Quantum optics toolbox
    "quimb>=1.7.0",  # Quantum information and many-body calculations
    "stim>=1.12.0",  # Quantum error correction
]

[project.urls]
Homepage = "https://github.com/template-heaven/templateheaven"
Documentation = "https://templateheaven.dev/docs/quantum-computing"
Repository = "https://github.com/template-heaven/templateheaven"
Issues = "https://github.com/template-heaven/templateheaven/issues"
Changelog = "https://github.com/template-heaven/templateheaven/blob/main/CHANGELOG.md"

[project.scripts]
quantum-starter = "quantum_computing_starter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantum_computing_starter*"]

[tool.setuptools.package-data]
"quantum_computing_starter" = ["py.typed"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | docs/_build
  | notebooks/.ipynb_checkpoints
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["quantum_computing_starter"]
known_third_party = ["qiskit", "cirq", "pennylane", "numpy", "matplotlib"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "cirq.*",
    "pennylane.*",
    "qutip.*",
    "quimb.*",
    "stim.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/quantum_computing_starter",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=75",
    "--asyncio-mode=auto",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "test_*.ipynb"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "performance: Performance tests",
    "slow: Slow running tests",
    "quantum: Quantum-specific tests",
    "qiskit: Qiskit-specific tests",
    "cirq: Cirq-specific tests",
    "pennylane: PennyLane-specific tests",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src/quantum_computing_starter"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/notebooks/*",
    "*/scripts/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", "env", ".venv", "notebooks", "scripts"]
skips = ["B101", "B601"]

# Safety configuration
[tool.safety]
output = "json"

# Flake8 configuration
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    "env",
    "docs/_build",
    "notebooks",
]

# Jupyter notebook testing
[tool.nbval]
skip_preprocessor = true
